crates/deadline-cli/tests/snapshots/cli_queue__queue_get_prints_all_fields.snap
---
source: crates/deadline-cli/tests/cli_queue.rs
info:
  program: deadline
  args:
    - queue
    - get
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:59651"
    AWS_ENDPOINT_URL_STS: "http://localhost:59651"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpDbWhoH/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpDbWhoH
---
success: true
exit_code: 0
----- stdout -----
queueId: queue-aaa
displayName: Production Queue
description: The production queue.
farmId: farm-abc
status: SCHEDULING
defaultBudgetAction: NONE
jobAttachmentSettings:
  s3BucketName: my-bucket
  rootPrefix: DeadlineCloud
roleArn: arn:aws:iam::123456789012:role/QueueRole
jobRunAsUser:
  windows:
    user: job-user
    passwordArn: arn:aws:secretsmanager:us-west-2:123456789012:secret:pw
  runAs: QUEUE_CONFIGURED_USER
createdAt: 2024-06-15 10:30:00+00:00
createdBy: arn:aws:sts::123456789012:assumed-role/Admin/user
updatedAt: 2024-07-01 12:00:00+00:00
updatedBy: arn:aws:sts::123456789012:assumed-role/Admin/user


----- stderr -----
